# StockAnalysis

./: .env  .gitignore  .pre-commit-config.yaml  Conversions.py  LICENSE  README.rst  app.py  pyproject.toml  requirements.txt  stock_collection.py  stock_day.py  stock_history.py  stocks.py
alembic/: env.py
alembic/versions/: bc0085b2d40f_first_migration.py
scripts/: start.sh
stockanalysis/: app.py  main.py  package-lock.json
stockanalysis/api/: deps.py
stockanalysis/api/v1/: api.py
stockanalysis/api/v1/endpoints/: stock_days.py  stocks.py
stockanalysis/client/: __init__.py
stockanalysis/core/: config.py
stockanalysis/crud/: __init__.py  crud_stock_days.py  crud_stocks.py
stockanalysis/db/: base.py  base_class.py  session.py  stub.py
stockanalysis/models/: __init__.py  stock.py
stockanalysis/schemas/: __init__.py  base.py  stock_days.py  stocks.py
stockanalysis/static/output/: main.js
stockanalysis/static/src/: main.jsx
stockanalysis/static/src/Button/: button.jsx
stockanalysis/static/stocks/: AAPL.json  IBM.json  MSFT.json  SPY.json
stockanalysis/stocks/: stock_collection.py  stock_day.py  stock_history.py  stocks.py
stockanalysis/stocks/common/: constants.py
stockanalysis/stocks/utils/: conversion_type.py  extract_json_files.py  query_params.py
stockanalysis/templates/: 400.html  403.html  404.html  500.html  500_generic.html  base.html  index.html
stockanalysis/utils/: helpers.py
templates/: index.html
tests/: conftest.py  test_stockanalysis.py
tests/api/: test_stocks.py
tests/common/: test_utils.py
