[tool.poetry]
name = "StockAnalysis"
version = "0.1.0"
description = ""
authors = ["ccortezaguilera <10718803+ccortezaguilera@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
quart = "^0.11.5"
aiohttp = "^3.6.2"
asyncio = "^3.4.3"
quart-openapi = "^1.5.3"
yfinance = "^0.1.54"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.2"
commitizen = "^2.4.1"
pre-commit = "^2.7.1"
PyYAML = "^5.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
